--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nats-wsdemo",
+  "name": "natsws-sandox",
   "version": "1.0.0",
   "description": "ws demo",
   "main": "index.html",
