--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "install-certs": "env CAROOT=./certs mkcert -cert-file ./certs/cert.pem -key-file ./certs/key.pem -install localhost 127.0.0.1 ::1",
     "uninstall-certs": "env CAROOT=./certs mkcert -uninstall && echo 'demo cert uninstalled, delete ./certs manually'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install-ns": "cd node_modules && git clone --branch=websocket https://github.com/nats-io/nats-server.git && cd nats-server && go build && mv nats-server ../../",
+    "install-ns": "cd node_modules && git clone --branch=master https://github.com/nats-io/nats-server.git && cd nats-server && go build && mv nats-server ../../",
     "start-nats": "./nats-server -DV -c nats.conf",
     "start-http": "cd ./bin && node server.js",
     "clean": "rm ./certs/*.pem ./content/nats.js ./content/nats.js.map ./nats-server && rm -R ./node_modules"
